sdk_tests/tests/pbc_contract_codegen/fail/zk/missing_zk_state_init.rs
use pbc_contract_codegen::init;

pub fn main() {}

#[init(zk = true)]
fn init(
    _context: pbc_contract_common::context::ContractContext,
) -> u64 {
    0
}
